--- a/README
+++ b/README
@@ -1,7 +1,9 @@
 This is currently incomplete.
 
 Features
-+MongoDB store of documents
++MongoDB store of JSON from apple store API
 
 Unimplemented
 -'Cache' behavior as in checking the db before going to the apple servers
+
+useful for large websites that want to satisfy the terms of service of the API
